# todo-cmd

./: Cargo.toml
assets/: logo.txt
src/: database.rs  main.rs
src/commands/: add.rs  delete.rs  list.rs  mod.rs
