[package]
name = "todo-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire ="*"
bunt="*"
human-panic="*"
tokio = {version="*", features=["full"]}
mongodb = "*"
futures = "0.3"
serde = "1.0.197"
